--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,17 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
 }
+
+defaultTasks 'jar'
+
+jar {
+ from {
+        (configurations.runtime).collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }    
+    manifest {
+        attributes 'Main-Class': 'codejam.MainClass'
+    }
+}
+
